==> eugenscobich/bees-scale/lib/RF24/RF24.cpp <==
#include "nRF24L01old.h"
#include "RF24_config.h"
#include "RF24.h"

void RF24::csn(bool level)
{
    HAL_GPIO_WritePin(nrf_csn_GPIOx, nrf_csn_GPIO_Pin, level ? GPIO_PIN_SET : GPIO_PIN_RESET);
    HAL_Delay(1);
}

void RF24::ce(bool level)
{
    HAL_GPIO_WritePin(nrf_ce_GPIOx, nrf_ce_GPIO_Pin, level ? GPIO_PIN_SET : GPIO_PIN_RESET);
}

void RF24::read_register(uint8_t reg, uint8_t* buf, uint8_t len)
{
    uint8_t command = R_REGISTER | reg;

    beginTransaction();
    HAL_StatusTypeDef _status = HAL_SPI_Transmit(hspi, &command, 1, 2000);
    handleSpiStatus(_status, 1);
    
    while (len--) {
        _status = HAL_SPI_Receive(hspi, buf++, 1, 2000);
        handleSpiStatus(_status, 2);
    }
    endTransaction();
}

uint8_t RF24::read_register(uint8_t reg)
{
    uint8_t command = R_REGISTER | reg;
    uint8_t result;

    beginTransaction();
    HAL_StatusTypeDef _status = HAL_SPI_TransmitReceive(hspi, &command, &status, 1, 2000);
    handleSpiStatus(_status, 3);

    _status = HAL_SPI_Receive(hspi, &result, 1, 2000);
    handleSpiStatus(_status, 4);
   
    endTransaction();
    return result;
}

void RF24::write_register(uint8_t reg, const uint8_t* buf, uint8_t len)
{
    uint8_t command = W_REGISTER | reg;

    beginTransaction();
    HAL_StatusTypeDef _status = HAL_SPI_TransmitReceive(hspi, &command, &status, 1, 2000);
    handleSpiStatus(_status, 5);
    while (len--) {
        uint8_t pData = *buf++;
        _status = HAL_SPI_Transmit(hspi, &pData, 1, 2000);
        handleSpiStatus(_status, 6);
    }
   
    endTransaction();
}

void RF24::write_register(uint8_t reg, uint8_t value, bool is_cmd_only)
{
    uint8_t command = W_REGISTER | reg;
    beginTransaction();
    HAL_StatusTypeDef _status = HAL_SPI_TransmitReceive(hspi, &command, &status, 1, 2000);
    handleSpiStatus(_status, 7);

    if (!is_cmd_only) {
        _status = HAL_SPI_Transmit(hspi, &value, 1, 2000);
        handleSpiStatus(_status, 8);
    }
    endTransaction();
}

void RF24::write_payload(const void* buf, uint8_t data_len, const uint8_t writeType)
{
    const uint8_t* current = reinterpret_cast<const uint8_t*>(buf);

    uint8_t blank_len = !data_len ? 1 : 0;
    if (!dynamic_payloads_enabled) {
        data_len = rf24_min(data_len, payload_size);
        blank_len = static_cast<uint8_t>(payload_size - data_len);
    }
    else {
        data_len = rf24_min(data_len, static_cast<uint8_t>(32));
    }


    beginTransaction();
    uint8_t command = writeType;
    HAL_StatusTypeDef _status = HAL_SPI_TransmitReceive(hspi, &command, &status, 1, 2000);
    handleSpiStatus(_status, 9);

    while (data_len--) {
        uint8_t pData = *current++;
        _status = HAL_SPI_Transmit(hspi, &pData, 1, 2000);
        handleSpiStatus(_status, 10);
    }

    while (blank_len--) {
        _status = HAL_SPI_Transmit(hspi, 0x00, 1, 2000);
        handleSpiStatus(_status, 11);
    }    
    endTransaction();

}

void RF24::read_payload(void* buf, uint8_t data_len)
{
    uint8_t* current = reinterpret_cast<uint8_t*>(buf);

    uint8_t blank_len = 0;
    if (!dynamic_payloads_enabled) {
        data_len = rf24_min(data_len, payload_size);
        blank_len = static_cast<uint8_t>(payload_size - data_len);
    }
    else {
        data_len = rf24_min(data_len, static_cast<uint8_t>(32));
    }

    beginTransaction();
    uint8_t command = R_RX_PAYLOAD;
    HAL_StatusTypeDef _status = HAL_SPI_TransmitReceive(hspi, &command, &status, 1, 2000);
    handleSpiStatus(_status, 12);

    while (data_len--) {
        _status = HAL_SPI_Receive(hspi, current++, 1, 2000);
        handleSpiStatus(_status, 13);
    }
    
    uint8_t temp = 0;
    while (blank_len--) {
        _status = HAL_SPI_Receive(hspi, &temp, 1, 2000);
        handleSpiStatus(_status, 14);
    }
   
    endTransaction();
}

bool RF24::begin(SPI_HandleTypeDef* _hspi, GPIO_TypeDef* _nrf_ce_GPIOx, uint16_t _nrf_ce_GPIO_Pin, GPIO_TypeDef* _nrf_csn_GPIOx, uint16_t _nrf_csn_GPIO_Pin)
{
    hspi = hspi;
    nrf_ce_GPIOx = _nrf_ce_GPIOx;
    nrf_ce_GPIO_Pin = _nrf_ce_GPIO_Pin;
    nrf_csn_GPIOx = _nrf_csn_GPIOx;
    nrf_csn_GPIO_Pin = _nrf_csn_GPIO_Pin;
    return begin();
}

bool RF24::begin(void)
{
    return _init_radio();
}

bool RF24::isValid()
{
    return nrf_ce_GPIO_Pin != RF24_PIN_INVALID && nrf_csn_GPIO_Pin != RF24_PIN_INVALID;
}

void RF24::stopListening(void)
{
    ce(0);
    
    HAL_Delay(1);
    if (ack_payloads_enabled) {
        flush_tx();
    }

    config_reg = static_cast<uint8_t>(config_reg & ~_BV(PRIM_RX));
    write_register(NRF_CONFIG, config_reg);
    write_register(EN_RXADDR, static_cast<uint8_t>(read_register(EN_RXADDR) | _BV(pgm_read_byte(&child_pipe_enable[0])))); // Enable RX on pipe0
}

void RF24::powerUp(void)
{
    // if not powered up then power up and wait for the radio to initialize
    if (!(config_reg & _BV(PWR_UP))) {
        config_reg |= _BV(PWR_UP);
        write_register(NRF_CONFIG, config_reg);

        // For nRF24L01+ to go from power down mode to TX or RX mode it must first pass through stand-by mode.
        // There must be a delay of Tpd2stby (see Table 16.) after the nRF24L01+ leaves power down mode before
        // the CEis set high. - Tpd2stby can be up to 5ms per the 1.0 datasheet
        HAL_Delay(RF24_POWERUP_DELAY);
    }
}

bool RF24::startWrite(const void* buf, uint8_t len, const bool multicast)
{

    // Send the payload
    write_payload(buf, len, multicast ? W_TX_PAYLOAD_NO_ACK : W_TX_PAYLOAD);
    ce(1);
    HAL_Delay(1);
    ce(0);
    return !(status & _BV(TX_FULL));
}

void RF24::toggle_features(void)
{
    uint8_t command = ACTIVATE;
    uint8_t command2 = 0x73;

    beginTransaction();
    HAL_StatusTypeDef _status = HAL_SPI_TransmitReceive(hspi, &command, &status, 1, 2000);
    handleSpiStatus(_status, 15);
    _status = HAL_SPI_Transmit(hspi, &command2, 1, 2000);
    handleSpiStatus(_status, 16);
    endTransaction();
}
